# ebook-wgpu-complex-function

./: Cargo.toml  README.md
examples/ch01/: complex3d_cpu.rs  shader_unlit.wgsl
examples/ch02/: complex3d_comp.wgsl  complex3d_gpu.rs  indices_comp.wgsl
examples/ch03/: domain_color.rs  domain_color_comp.wgsl  iterate_func.rs  iterate_func_comp.wgsl  render_shader.wgsl
src/: complex3d_data.rs  complex_func.wgsl  lib.rs
